--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
                 <p>Looking to hire quality candidates? Post a job on JobConnect and reach thousands of job seekers.</p>
                 <button class="btn btn-primary btn-lg">Post a Job</button>
             </div>
-            <img src="/api/placeholder/400/300" alt="Hiring Manager" class="cta-image">
+            <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?auto=format&fit=crop&w=400&h=300&q=80" 
+     alt="Hiring Manager" 
+     class="cta-image">
+
         </div>
     </section>
 
